@@ -1,3 +1,12 @@
+2005-01-11  Michael Koch  <konqueror@gmx.de>
+
+	* java/awt/Robot.java,
+	java/awt/Scrollbar.java,
+	java/awt/print/PrinterJob.java,
+	javax/swing/JTable.java,
+	javax/swing/text/AbstractDocument.java:
+	Reworked import statements.
+
 2005-01-10  Michael Koch  <konqueror@gmx.de>
 
 	* javax/swing/JEditorPane.java
